# serial-multiplexer

./: .gitignore  Cargo.toml  README.md  config.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  tests-linux-x86_64.yml  tests-windows.yml
configs/: config-guest.toml  config-host.toml
crates/cli/: Cargo.toml
crates/cli/src/: configuration.rs  main.rs  runner.rs
crates/config/: Cargo.toml
crates/config/src/: configuration.rs
crates/shared/: Cargo.toml
crates/shared/src/: channels.rs  common.rs  guest.rs  host.rs  host_http.rs  lib.rs  protocol_utils.rs  schema_generated.rs  sink.rs  test_utils.rs  try_write.rs  utils.rs
fuzz/: Cargo.toml
fuzz/fuzzing_targets/: handle_sink_read_afl.rs  process_sink_read_afl.rs
serial-multiplexer-lib/: Cargo.toml
serial-multiplexer-lib/src/: common.rs  guest.rs  protocol_utils.rs  utils.rs
src/: client.rs  common.rs  configuration.rs  guest.rs  host.rs  main.rs  protocol_utils.rs  runner.rs  schema_generated.rs  server.rs  test_utils.rs  utils.rs
src/schema/: schema.fbs
