[package]
name = "serial-multiplexer"
authors = ["Valentín Bolfík <valentin.bolfik@gmail.com>"]
version = "0.7.0"
edition = "2024"

[profile.release]
lto = "fat"
codegen-units = 1
debug = "full"
strip = "debuginfo"
opt-level = 3
incremental = true

[dependencies]
serial-multiplexer-lib = { path = "serial-multiplexer-lib" }
anyhow = "1.0.99"
async-broadcast = "0.7.2"
async-channel = "2.5.0"
bytes = "1.10.1"
clap = { version = "4.5.47", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.31"
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-serial = "5.4.5"
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-attributes = "0.1.30"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
