[workspace.package]
authors = ["Valentín Bolfík <valentin.bolfik@gmail.com>"]
version = "0.7.1-beta.1"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "crates/cli",
    "crates/config",
    "crates/shared"
]

[profile.release]
lto = "fat"
codegen-units = 1
debug = "full"
strip = "debuginfo"
opt-level = 3
incremental = true

[workspace.dependencies]
anyhow = "1.0.100"
async-broadcast = "0.7.2"
async-channel = "2.5.0"
bytes = "1.10.1"
clap = { version = "4.5.49", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-serial = "5.4.5"
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-attributes = "0.1.30"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

fast-socks5 = "1.0.0-rc.0"
flatbuffers = "25.9.23"
memchr = "2.7.6"
zeroize = "1.8.2"
zstd-safe = { version = "7.2.4", features = ["std"] }
