[package]
name = "serial-multiplexer-fuzz"
version = "0.0.1"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
afl = "0.15"
serial-multiplexer-lib = { path = "../serial-multiplexer-lib" }
bytes = "1.10.1"
async-broadcast = "0.7.2"
tokio = { version = "1.47.1", features = ["full"] }

[[bin]]
name = "handle_sink_read_afl"
path = "fuzzing_targets/handle_sink_read_afl.rs"
test = false
doc = false
bench = false
