[package]
name = "serial-multiplexer-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-broadcast = "0.7.2"
async-channel = "2.5.0"
bytes = "1.10.1"
fast-socks5 = "1.0.0-rc.0"
flatbuffers = "25.2.10"
futures = "0.3.31"
memchr = "2.7.5"
tokio = { version = "1.47.1", features = ["full"] }
tokio-serial = "5.4.5"
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-attributes = "0.1.30"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zeroize = "1.8.1"
zstd-safe = { version = "7.2.4", features = ["std"] }
