[package]
name = "serial-multiplexer"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
serial-multiplexer-lib = { path = "../shared" }
config = { path = "../config" }
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-channel = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
papaya = { workspace = true }
tokio = { workspace = true }
tokio-serial = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-attributes = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
path = "src/main.rs"
name = "serial-multiplexer"